--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="8bcfcb">  <td>20/02/09 14:47:19</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_AddCustTest_003.AddNewCustomer()[pri:0, instance:com.commproj.testcases.TC_AddCustTest_003@1794d431]">AddNewCustomer</td> 
+<tr bgcolor="8bcfcb">  <td>20/02/10 19:00:11</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_LoginTest_0001.login()[pri:0, instance:com.commproj.testcases.TC_LoginTest_0001@1794d431]">login</td> 
   <td>main@793315160</td>   <td></td> </tr>
-<tr bgcolor="beef9d">  <td>20/02/09 14:47:12</td>   <td>-6646</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setup(java.lang.String)[pri:0, instance:com.commproj.testcases.TC_AddCustTest_003@1794d431]">&gt;&gt;setup</td> 
+<tr bgcolor="beef9d">  <td>20/02/10 19:00:03</td>   <td>-8114</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setup(java.lang.String)[pri:0, instance:com.commproj.testcases.TC_LoginTest_0001@1794d431]">&gt;&gt;setup</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@793315160</td>   <td></td> </tr>
-<tr bgcolor="beef9d">  <td>20/02/09 14:47:56</td>   <td>37038</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.teardown()[pri:0, instance:com.commproj.testcases.TC_AddCustTest_003@1794d431]">&lt;&lt;teardown</td> 
+<tr bgcolor="beef9d">  <td>20/02/10 19:00:51</td>   <td>40270</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.teardown()[pri:0, instance:com.commproj.testcases.TC_LoginTest_0001@1794d431]">&lt;&lt;teardown</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@793315160</td>   <td></td> </tr>
 </table>
